src/test/deca/syntax/invalid/ecriture_dehors_brace.synt
ecriture_dehors_brace.deca:12: